[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemies/Bat/character_0024.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Bat/character_0025.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Bat/character_0026.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Enemies/Bat/fly_away.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Enemies/Bat/sfx_deathscream_alien2.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 30.0666

[node name="Bat" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 4 )

[node name="DieFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="FlyingFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -40.0

[node name="texture" type="AnimatedSprite" parent="."]
position = Vector2( 64, 80 )
scale = Vector2( 3.33333, 3.33333 )
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, 80 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 64, 80 )
shape = SubResource( 4 )

[node name="AttackArea" type="Area2D" parent="." groups=["damage"]]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 64, 80 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ray_wall_y" type="RayCast2D" parent="."]
position = Vector2( 64, 80 )
enabled = true
cast_to = Vector2( 0, 38 )

[node name="ray_wall_x" type="RayCast2D" parent="."]
position = Vector2( 64, 80 )
enabled = true
cast_to = Vector2( -38, 0 )

[connection signal="finished" from="FlyingFX" to="." method="_on_FlyingFX_finished"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
